<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="openSecond"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/num1"
        android:layout_width="97dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="156dp"
        android:text="@string/num_1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/num2"
        android:layout_width="96dp"
        android:layout_height="27dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="260dp"
        android:text="@string/num_2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_1"
        android:layout_width="236dp"
        android:layout_height="62dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="500dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck"
        tools:text="@string/text_1" />

    <EditText
        android:id="@+id/text_2"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_1"
        tools:ignore="SpeakableTextPresentCheck"
        tools:text="@string/text_2" />

    <Button
        android:id="@+id/buttn_1"
        android:layout_width="140dp"
        android:layout_height="66dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="464dp"
        android:onClick="openSecond"
        android:text="@string/buttn_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>